--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:gh": "ng build --base-href=/selectel-cloud-config/",
+    "deploy:gh": "npm run build:gh && npx gh-pages -d dist/selectel/browser",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:selectel": "node dist/selectel/server/server.mjs"
@@ -37,12 +39,16 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "@angular/build": "^21.1.4",
     "@angular/cli": "^21.1.4",
     "@angular/compiler-cli": "^21.1.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/express": "^5.0.1",
     "@types/node": "^20.17.19",
     "jsdom": "^27.1.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
   }
